Revert "testing slower gradient animation"
This reverts commit f9ef117bb445a77c4dc766be5ae38c94d67ee52e.

--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ input:focus {
       var(--main),
       var(--secondary), var(--main));
   border-radius: 1.5rem;
-  animation: rotation 30s linear infinite;
+ /*  animation: rotation 15s linear infinite; */
 }
 
 .typewrapper::after {
