fix ios problems on buttons try 2

--- a/style.css
+++ b/style.css
@@ -201,6 +201,7 @@ input:focus {
   cursor: pointer;
   height: 3rem;
   width: 3rem;
+  padding: 0;
   border: solid 2px var(--main);
   border-radius: 50%;
   position: relative;
